Bug 201071 signature file containing accented characters has become corrupted / Bug 153855 Composer does not display a UTF-8 signature in the right way. r=jshin, sr=bienvenu